tests/lean/phashmap_inst_coherence.lean.expected.out
phashmap_inst_coherence.lean:12:6: error: application type mismatch
  PersistentHashMap.find? m
argument
  m
has type
  PersistentHashMap Nat Nat
but is expected to have type
  PersistentHashMap Nat Nat
failed to synthesize instance
  CoeT (PersistentHashMap Nat Nat) m (PersistentHashMap Nat Nat)
phashmap_inst_coherence.lean:12:0: error: application type mismatch
  Lean.runEval (sorryAx ?m)
argument
  sorryAx ?m
has type
  ?m
but is expected to have type
  ?m
